--- a/AssetManager.DbContext/App.config
+++ b/AssetManager.DbContext/App.config
@@ -8,11 +8,7 @@
     <add name="AssetConnection" connectionString="Data Source=.;Initial Catalog=AssetManager;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework>
-    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
-      <parameters>
-        <parameter value="mssqllocaldb" />
-      </parameters>
-    </defaultConnectionFactory>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework"/>
     <providers>
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
