--- a/AssetManager.DbContext/AssetManager.DbContext.csproj
+++ b/AssetManager.DbContext/AssetManager.DbContext.csproj
@@ -48,6 +48,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AssetContext.cs" />
+    <Compile Include="DropCreateDatabaseIfModelChangesSeed.cs" />
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
